--- a/package.json
+++ b/package.json
@@ -9,19 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@webcontainer/api": "^1.1.8",
+    "exceljs": "^4.4.0",
+    "express": "^4.18.2",
+    "i": "^0.3.7",
+    "ky": "^1.1.3",
+    "multer": "^1.4.5-lts.1",
+    "next": "14.0.4",
+    "npm": "^10.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "use-immer": "^0.9.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "typescript": "^5"
   }
 }
