--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@webcontainer/api": "^1.1.8",
+    "framer-motion": "^10.16.16",
     "ky": "^1.1.3",
     "next": "14.0.4",
     "npm": "^10.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.3.1",
     "use-immer": "^0.9.0"
   },
   "devDependencies": {
