--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@webcontainer/api": "^1.1.8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "framer-motion": "^10.16.16",
     "ky": "^1.1.3",
+    "lucide-react": "^0.311.0",
     "next": "14.0.4",
     "npm": "^10.2.5",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.3.1",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "use-immer": "^0.9.0"
   },
   "devDependencies": {
